Contact pages CSS - Correction on height, menu hid Corrected the body and html height 0f 100% which was throwing off page design. Added a rule to hide the menu button on mobile devices for the contact page. This change will not take effect until the general styles for the ASC page (for header, footer, background) are copied into the contact_styles.css file. Currently, rules for #menuButton within the asc_styles.css file override the styles in contact_styles.css. I would prefer to move styles for main page element into contact_styles.css in order to avoid using an instance of `!important`.

--- a/contact_styles.css
+++ b/contact_styles.css
@@ -1,8 +1,5 @@
 /*=========================================================*/
 /*-----------------   CONTACT global   -------------------*/
-/* html, body {
-    height: 100%;
-} */
 .formContainer {
     overflow: hidden;
 }
@@ -226,6 +223,9 @@ header {
     overflow: hidden;
     transition: all ease 150ms;
     transition-delay: 350ms;
+}
+#menuButton {
+    display: hide;
 }
 .bg {
     /* height: 100vh; */
